--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 edition = "2021"
 description = "A procedural macro for generating dataclasses in Rust."
 license = "MIT"
+repository = "https://github.com/asukaminato0721/dataclass-macro"
+readme = "README.md"
+keywords = ["dataclass", "macro", "derive"]
+categories = ["development-tools"]
+authors = ["Asuka Minato <i at asukaminato dot eu dot org>"]
 
 [lib]
 proc-macro = true
